--- a/Blog/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Blog/Views/Shared/_Layout.cshtml
@@ -27,13 +27,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("ブログ", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("LifeLog", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("ホーム", "Index", "Home")</li>
-                    <li>@Html.ActionLink("詳細", "About", "Home")</li>
-                    <li>@Html.ActionLink("連絡先", "Contact", "Home")</li>
+                    <li>@Html.ActionLink(@Blog.Resources.BlogResources.Home, "Index", "Home")</li>
+                    <li>@Html.ActionLink(@Blog.Resources.BlogResources.Detail, "About", "Home")</li>
+                    <li>@Html.ActionLink(@Blog.Resources.BlogResources.Contact, "Contact", "Home")</li>
 
                 </ul>
                 @Html.Partial("_LoginPartial")
