Updated resource files

--- a/Blog/Blog/Views/Home/Index.cshtml
+++ b/Blog/Blog/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 
 
 @*<h1 class="page-header">
-    LifeLog
+    @Blog.Resources.BlogResources.BlogName
     <small>オープンソースブログです。</small>
 </h1>*@
 <div class="container">
