--- a/Blog/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Blog/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Lifelog</title>
+    <title>@ViewBag.Title - @Blog.Resources.BlogResources.BlogName</title>
 
     @*Styles.Render を利用する場合、下記は不要*@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
@@ -27,7 +27,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("LifeLog", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink(@Blog.Resources.BlogResources.BlogName, "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -43,13 +43,13 @@
     <div class="container body-content">
 
         <h1 class="page-header">
-            Lifelog
+            @Blog.Resources.BlogResources.BlogName
             <small>オープンソースブログです。</small>
         </h1>
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Lifelog</p>
+            <p>&copy; @DateTime.Now.Year - @Blog.Resources.BlogResources.BlogName</p>
         </footer>
     </div>
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
