--- a/Blog/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Blog/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
 
         <h1 class="page-header">
             @Blog.Resources.BlogResources.BlogName
-            <small>オープンソースブログです。</small>
+            <small>@Blog.Resources.BlogResources.Description</small>
         </h1>
         @RenderBody()
         <hr />
