--- a/Blog/Blog/Views/Dashboard/Create.cshtml
+++ b/Blog/Blog/Views/Dashboard/Create.cshtml
@@ -48,9 +48,9 @@
     </div>
 }
 
-<div>
+@*<div>
     @Html.ActionLink("Back to List", "Index")
-</div>
+</div>*@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
