--- a/Blog/Blog/Views/Home/Details.cshtml
+++ b/Blog/Blog/Views/Home/Details.cshtml
@@ -35,5 +35,5 @@
     {
         @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) @Html.Raw("&nbsp;|")
     }
-    @Html.ActionLink("Back to List", "Index")
+    @*@Html.ActionLink("Back to List", "Index")*@
 </p>
