--- a/Blog/Blog/Views/Dashboard/Edit.cshtml
+++ b/Blog/Blog/Views/Dashboard/Edit.cshtml
@@ -52,9 +52,9 @@
     </div>
 }
 
-<div>
+@*<div>
     @Html.ActionLink("Back to List", "AllPosts")
-</div>
+</div>*@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
