Updated resource strings

--- a/Blog/Blog/Views/Home/Details.cshtml
+++ b/Blog/Blog/Views/Home/Details.cshtml
@@ -33,7 +33,7 @@
 <p>
     @if (Request.IsAuthenticated)
     {
-        @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) @Html.Raw("&nbsp;|")
+        @Html.ActionLink(@Blog.Resources.BlogResources.Edit, "Edit", new { id = Model.ID }) @*@Html.Raw("&nbsp;|")*@
     }
     @*@Html.ActionLink("Back to List", "Index")*@
 </p>
