--- a/Blog/Blog/Views/Shared/_LoginPartial.cshtml
+++ b/Blog/Blog/Views/Shared/_LoginPartial.cshtml
@@ -9,8 +9,8 @@
         <li>
             @Html.ActionLink("こんにちは、" + User.Identity.GetUserName() + "さん", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
         </li>
-        <li>@Html.ActionLink("管理画面", "Index", "Dashboard")</li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">ログオフ</a></li>
+        <li>@Html.ActionLink(@Blog.Resources.BlogResources.Dashboard, "Index", "Dashboard")</li>
+        <li><a href="javascript:document.getElementById('logoutForm').submit()">@Blog.Resources.BlogResources.LogOff</a></li>
     </ul>
     }
 }
