Updated Dashboard page
Updated Dashboard to show menu items aligning with material design

--- a/Blog/Blog/Views/Dashboard/Index.cshtml
+++ b/Blog/Blog/Views/Dashboard/Index.cshtml
@@ -3,10 +3,27 @@
     ViewBag.Title = "Dashboard View";
 }
 
+<style type="text/css">
+
+</style>
 <h2>Dashboard</h2>
 
-<ul>
+@*<ul>
     <li>@Html.ActionLink("新規投稿", "Create", "Dashboard")</li>
     <li>@Html.ActionLink("投稿一覧", "AllPosts", "Dashboard")</li>
 
+</ul>*@
+
+<!-- Single line list with icons -->
+@*https://material.io/icons/*@
+@*http://propeller.in/components/list.php*@
+<ul class="list-group pmd-z-depth pmd-list pmd-card-list pmd-list-icon">
+    <li class="list-group-item">
+        <i class="material-icons media-left pmd-sm">list</i>
+        <span class="media-body">@Html.ActionLink(@Blog.Resources.BlogResources.Create, "Create", "Dashboard")</span>
+    </li>
+    <li class="list-group-item">
+        <i class="material-icons media-left pmd-sm">create</i>
+        <span class="media-body">@Html.ActionLink(@Blog.Resources.BlogResources.AllPosts, "AllPosts", "Dashboard")</span>
+    </li>
 </ul>
