--- a/Blog/Blog/Views/Home/Index.cshtml
+++ b/Blog/Blog/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
                     <h2>
                         @Html.ActionLink(@Html.DisplayFor(modelItem => item.Title).ToString(), "Details", new { id = item.ID })
                     </h2>
-                    <p><span class="glyphicon glyphicon-time"></span> Posted on @Html.DisplayFor(modelItem => item.Published)</p>
+                    <p><span class="glyphicon glyphicon-time"></span> @Blog.Resources.BlogResources.PostedOn @Html.DisplayFor(modelItem => item.Published)</p>
                     <hr>
                     <p>@Html.Raw(item.Description.Replace(Environment.NewLine, "<br/>"))</p>
                     <a class="btn btn-raised btn-warning" href="@Url.Action("Details", "Home", new { id = item.ID })">@Blog.Resources.BlogResources.ReadMore<span class="glyphicon glyphicon-chevron-right"></span></a>
