--- a/Blog/Blog/Views/Dashboard/AllPosts.cshtml
+++ b/Blog/Blog/Views/Dashboard/AllPosts.cshtml
@@ -13,7 +13,8 @@
             <div class="well">
                 <h4>@Blog.Resources.BlogResources.Dashboard</h4>
                 <div class="row">
-                    <div class="col-lg-12">
+                    @*<div class="col-lg-12">*@
+                    <div>
                         <ul class="list-unstyled"></ul>
                         @Html.Partial("_DashboardPartial", null)
                     </div>
