Updated config icon

--- a/Blog/Blog/Views/Dashboard/_DashboardPartial.cshtml
+++ b/Blog/Blog/Views/Dashboard/_DashboardPartial.cshtml
@@ -11,7 +11,7 @@
         <span class="media-body">@Html.ActionLink(@Blog.Resources.BlogResources.AllPosts, "AllPosts", "Dashboard")</span>
     </li>
     <li class="list-group-item">
-        <i class="material-icons media-left pmd-sm">create</i>
+        <i class="material-icons media-left pmd-sm">settings</i>
         <span class="media-body">@Html.ActionLink(@Blog.Resources.BlogResources.Configuration, "Configuration", "Dashboard")</span>
     </li>
 </ul>
