--- a/Blog/Blog/Views/Home/Index.cshtml
+++ b/Blog/Blog/Views/Home/Index.cshtml
@@ -8,8 +8,7 @@
     <div class="row">
 
         <div class="col-sm-9" >
-            @*style="background-color:transparent;"*@
-
+            @*Show posts when any post already exists.*@
             @foreach (var item in Model)
             {
             <!-- Blog Post -->
@@ -23,7 +22,17 @@
                     <a class="btn btn-raised btn-warning" href="@Url.Action("Details", "Home", new { id = item.ID })">@Blog.Resources.BlogResources.ReadMore<span class="glyphicon glyphicon-chevron-right"></span></a>
                 </section>
             }
-
+            @*Show a link to Create action when no post exists.*@
+            @if (Model.Count() == 0)
+            {
+                <section class="well">
+                    <h2>
+                        まだ投稿がありません。
+                    </h2>
+                    <hr>
+                    <a class="btn btn-raised btn-warning" href="@Url.Action("Create", "Home")">最初の投稿<span class="glyphicon glyphicon-chevron-right"></span></a>
+                </section>
+            }
         </div>
         <!-- Blog Sidebar Widgets Column -->
         <div class="col-sm-3">
@@ -82,60 +91,6 @@
                 </div>
                 <!-- /.row -->
             </div>
-            <div class="panel panel-default">
-                @*<div class="panel-heading">Panel heading without title</div>*@
-                @*<div class="panel-body">*@
-                    @*<ul>
-
-                        @{
-
-                            List<int> uniqueYearLabel = new List<int>();
-                            Dictionary<DateTime, int> yearList = ViewData["yearList"] as Dictionary<DateTime, int>;
-                            if (yearList != null)
-                            {
-                                foreach (var item in yearList)
-                                {
-                                    if (!uniqueYearLabel.Contains(item.Key.Year))
-                                    {
-                                        uniqueYearLabel.Add(item.Key.Year);
-                                    }
-                                }
-
-                                var yearmonthlist = yearList.GroupBy(p => new { p.Key.Year, p.Key.Month });
-
-                                // uniquelist loop
-                                foreach (var label in uniqueYearLabel)
-                                {
-                                    @Html.Raw("<li>")
-                                    @Html.Raw(label)
-
-                                    foreach (var dic in yearList)
-                                    {
-                                        @Html.Raw("<ul>")
-                                        if (label == dic.Key.Year)
-                                        {
-                                            @Html.Raw("<li>")
-                                            @Html.ActionLink(dic.Key.ToString("MM月"), "Date", new { id = dic.Key.ToString("yyyy-MM") })
-                                            @Html.Raw(" (" + dic.Value.ToString() + ")")
-
-
-                                            @Html.Raw("</li>")
-                                        }
-                                        @Html.Raw("</ul>")
-                                    }
-                                    @Html.Raw("</li>")
-                                }
-                            }
-
-
-                        }
-                    </ul>*@
-
-                @*</div>*@
-            </div>
-
-
-
         </div>
     </div>
 
