Updated to show checkbox to remember me

--- a/Blog/Blog/Views/Account/Login.cshtml
+++ b/Blog/Blog/Views/Account/Login.cshtml
@@ -31,8 +31,10 @@
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
                         <div class="checkbox">
-                            @Html.CheckBoxFor(m => m.RememberMe)
-                            @Html.LabelFor(m => m.RememberMe)
+                            <label>
+                                @Html.CheckBoxFor(m => m.RememberMe)
+                                @Html.LabelFor(m => m.RememberMe)
+                            </label>
                         </div>
                     </div>
                 </div>
