--- a/Blog/Blog/Views/Dashboard/AllPosts.cshtml
+++ b/Blog/Blog/Views/Dashboard/AllPosts.cshtml
@@ -21,16 +21,32 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
-                    <h4 class="modal-title w-100" id="myModalLabel">Modal title</h4>
+                    <h4 class="modal-title w-100" id="myModalLabel">Confirmation!</h4>
                 </div>
                 <!--Body-->
                 <div class="modal-body">
-                    ...
+                    Are you sure to delete the post?
                 </div>
                 <!--Footer-->
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    @*<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary">Delete</button>*@
+                    @*DeleteConfirmed*@
+                    @using (Html.BeginForm("Delete", "Dashboard"))
+                    {
+                        @Html.AntiForgeryToken()
+                        
+                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                            @Html.Hidden("id", 2)
+                            <div class="form-group">
+                                <div class="col-md-offset-2 col-md-10">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                    <input type="submit" value="Delete" class="btn btn-primary" />
+                                </div>
+                            </div>
+                            @*<button type="button" class="btn btn-primary">Delete</button>*@
+                        //DeleteConfirmed
+                    }
                 </div>
             </div>
             <!--/.Content-->
@@ -75,7 +91,7 @@
                                 <td>@item.Published</td>
                                 <td>
                                     <!-- Button trigger modal -->
-                                    <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#myModal">
+                                    <button id="dialogButton" type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#myModal">
                                         X
                                     </button>
                                 </td>
@@ -113,5 +129,16 @@
     </div>
 </div>
 
-
+<script>
+    window.onload = function () {
+        var dialogButton = document.getElementById("dialogButton");
+        dialogButton.onclick = function () {
+            var hiddenIdElem = document.getElementById("id");
+            var _idText = this.parentElement.parentElement.cells["0"].textContent;
+            var _id = parseInt(_idText);
+            hiddenIdElem.value = _id;
+        }
+    }
+    
+</script>
 
