--- a/Blog/Blog/Views/Home/Index.cshtml
+++ b/Blog/Blog/Views/Home/Index.cshtml
@@ -41,7 +41,7 @@
             <div class="well">
                 <h4>@Blog.Resources.BlogResources.Archive</h4>
                 <div class="row">
-                    <div class="col-lg-6">
+                    <div class="col-lg-9">
                         <ul class="list-unstyled">
 
                             @{
@@ -72,7 +72,7 @@
                                             if (label == dic.Key.Year)
                                             {
                                                 @Html.Raw("<li>")
-                                                @Html.ActionLink(dic.Key.ToString("MM月"), "Date", new { id = dic.Key.ToString("yyyy-MM") })
+                                                @Html.ActionLink(dic.Key.ToString("MMMM"), "Date", new { id = dic.Key.ToString("yyyy-MM") })
                                                 @Html.Raw(" (" + dic.Value.ToString() + ")")
 
 
