Moved script code to an external js file

--- a/Blog/Blog/Views/Dashboard/AllPosts.cshtml
+++ b/Blog/Blog/Views/Dashboard/AllPosts.cshtml
@@ -129,16 +129,5 @@
     </div>
 </div>
 
-<script>
-    window.onload = function () {
-        var dialogButton = document.getElementById("dialogButton");
-        dialogButton.onclick = function () {
-            var hiddenIdElem = document.getElementById("id");
-            var _idText = this.parentElement.parentElement.cells["0"].textContent;
-            var _id = parseInt(_idText);
-            hiddenIdElem.value = _id;
-        }
-    }
-    
-</script>
+<script type="text/javascript" src="~/Scripts/dashboard.js"></script>
 
