--- a/Blog/Blog/Views/Dashboard/AllPosts.cshtml
+++ b/Blog/Blog/Views/Dashboard/AllPosts.cshtml
@@ -129,5 +129,4 @@
     </div>
 </div>
 
-<script type="text/javascript" src="~/Scripts/dashboard.js"></script>
-
+<script src="~/Scripts/Dashboard/AllPosts.js"></script>
