Rmoved blog name from body content

--- a/Blog/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Blog/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
     <div class="container body-content">
 
         <h1 class="page-header">
-            @Blog.Resources.BlogResources.BlogName
+            @*@Blog.Resources.BlogResources.BlogName*@
             <small>@ViewBag.Description</small>
         </h1>
         @RenderBody()
