--- a/Blog/Blog/Views/Dashboard/AllPosts.cshtml
+++ b/Blog/Blog/Views/Dashboard/AllPosts.cshtml
@@ -7,7 +7,6 @@
         margin:0px;
     }
 </style>
-<h2>@Blog.Resources.BlogResources.AllPosts</h2>
 
 <div class="container">
 
@@ -59,7 +58,7 @@
         <div class="col-sm-3">
             <!-- Blog Categories Well -->
             <div class="well">
-                <h4>@Blog.Resources.BlogResources.Dashboard</h4>
+                <h4>@Blog.Resources.BlogResources.Menu</h4>
                 <div class="row">
                     @*<div class="col-lg-12">*@
                     <div>
