--- a/Blog/Blog/Views/Dashboard/Configuration.cshtml
+++ b/Blog/Blog/Views/Dashboard/Configuration.cshtml
@@ -4,8 +4,6 @@
     ViewBag.Title = @Blog.Resources.BlogResources.Configuration;
 }
 
-<h2>@Blog.Resources.BlogResources.Configuration</h2>
-
 
 <div class="container">
     <div class="row">
@@ -13,7 +11,7 @@
         <div class="col-sm-3">
             <!-- Blog Categories Well -->
             <div class="well">
-                <h4>@Blog.Resources.BlogResources.Dashboard</h4>
+                <h4>@Blog.Resources.BlogResources.Menu</h4>
                 <div class="row">
                     <div>
                         @*<div class="col-lg-12">*@
