--- a/Blog/Blog/Views/Dashboard/Create.cshtml
+++ b/Blog/Blog/Views/Dashboard/Create.cshtml
@@ -4,8 +4,6 @@
     ViewBag.Title = @Blog.Resources.BlogResources.Create;
 }
 
-<h2>@Blog.Resources.BlogResources.Create</h2>
-
 
 <div class="container">
     <div class="row">
@@ -13,7 +11,7 @@
         <div class="col-sm-3">
             <!-- Blog Categories Well -->
             <div class="well">
-                <h4>@Blog.Resources.BlogResources.Dashboard</h4>
+                <h4>@Blog.Resources.BlogResources.Menu</h4>
                 <div class="row">
                     <div>
                         @*<div class="col-lg-12">*@
@@ -32,8 +30,6 @@
                     @Html.AntiForgeryToken()
 
                     <div class="form-horizontal">
-                        <h4>Post</h4>
-                        <hr />
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         <div class="form-group">
                             @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
