Added search feature

--- a/Blog/Blog/Views/Home/Index.cshtml
+++ b/Blog/Blog/Views/Home/Index.cshtml
@@ -35,6 +35,7 @@
                 </section>
             }
         </div>
+        @Html.Partial("_Search", null)
         @Html.Partial("_Archive", null)
     </div>
 
