--- a/Blog/Blog/Views/Dashboard/AllPosts.cshtml
+++ b/Blog/Blog/Views/Dashboard/AllPosts.cshtml
@@ -28,23 +28,19 @@
                 </div>
                 <!--Footer-->
                 <div class="modal-footer">
-                    @*<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary">Delete</button>*@
                     @*DeleteConfirmed*@
                     @using (Html.BeginForm("Delete", "Dashboard"))
                     {
                         @Html.AntiForgeryToken()
                         
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                            @Html.Hidden("id", 2)
+                            @Html.Hidden("id")
                             <div class="form-group">
                                 <div class="col-md-offset-2 col-md-10">
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                                     <input type="submit" value="Delete" class="btn btn-primary" />
                                 </div>
                             </div>
-                            @*<button type="button" class="btn btn-primary">Delete</button>*@
-                        //DeleteConfirmed
                     }
                 </div>
             </div>
