--- a/Blog/Blog/Views/Dashboard/Edit.cshtml
+++ b/Blog/Blog/Views/Dashboard/Edit.cshtml
@@ -63,6 +63,17 @@
 
                         <div class="form-group">
                             <div class="col-md-offset-2 col-md-10">
+                                <div class="checkbox">
+                                    <label>
+                                        @Html.CheckBoxFor(m => m.IsDraft)
+                                        @Html.LabelFor(m => m.IsDraft)
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="col-md-offset-2 col-md-10">
                                 <input type="submit" value="Save" class="btn btn-default" />
                             </div>
                         </div>
