--- a/Blog/Blog/Views/Home/Details.cshtml
+++ b/Blog/Blog/Views/Home/Details.cshtml
@@ -33,7 +33,8 @@
 <p>
     @if (Request.IsAuthenticated)
     {
-        @Html.ActionLink(@Blog.Resources.BlogResources.Edit, "Edit", new { id = Model.ID }) @*@Html.Raw("&nbsp;|")*@
+        //Editing should be done in the Dashboard
+        @*@Html.ActionLink(@Blog.Resources.BlogResources.Edit, "Edit", new { id = Model.ID })*@ @*@Html.Raw("&nbsp;|")*@
     }
     @*@Html.ActionLink("Back to List", "Index")*@
 </p>
