--- a/Blog/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Blog/Views/Shared/_Layout.cshtml
@@ -51,6 +51,10 @@
                         {
                             menuLabel = Blog.Resources.BlogResources.Create;
                         }
+                        if (actionPath == "Edit")
+                        {
+                            menuLabel = Blog.Resources.BlogResources.Edit;
+                        }
                         if (actionPath == "Configuration")
                         {
                             menuLabel = Blog.Resources.BlogResources.Configuration;
