Added Current property to DataContext
Added Current property in order to manage DataContext resource in one
place

--- a/Blog/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Blog/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
                         {
                             menuLabel = Blog.Resources.BlogResources.Edit;
                         }
-                        if (actionPath == "Configuration")
+                        if (actionPath == "Configuration" || actionPath == "Update")
                         {
                             menuLabel = Blog.Resources.BlogResources.Configuration;
                         }
